--- a/Aplikacja/style/main.css
+++ b/Aplikacja/style/main.css
@@ -5,6 +5,7 @@ height:100%;
 }
 
 #scena{
+display:none;
 position:relative;
 width:100%;
 height:70%;
@@ -20,7 +21,7 @@ overflow-y: auto;
 position:relative;
 width:90%;
 height:30%;
-#background-color:red;
+background-color:white;
 border:2px solid red;
 margin-left:5%;
 margin-top:2%;
