poprawiono efekt pojawiania sie wpisow koncertow

--- a/Aplikacja/style/main.css
+++ b/Aplikacja/style/main.css
@@ -8,14 +8,21 @@ height:100%;
 display:none;
 position:relative;
 width:100%;
+height:100%;
+background-color: #80B8E8;
+#border: 2px solid red;
+margin:0px;
+padding:0px;
+overflow-y: auto;
+}
+#scena_do_pojawiania{
+position:relative;
+width:100%;
 height:70%;
-#display:none;
 background-color: #80B8E8;
 border: 2px solid red;
 margin:0px;
 padding:0px;
-overflow-y: auto;
-
 }
 #koncert{
 position:relative;
