dodano sekcje filtrow
jak narazie zostala stworzona cala sekcja filtrow. Wszystkie wybory
zostaja zapisane do trzech tablic ktore mozna przekazac do innych funkci
filtrujacych. Nie ma jescz zmiennej ktora by przechowywala date od do

--- a/Aplikacja/style/scena.css
+++ b/Aplikacja/style/scena.css
@@ -3,6 +3,10 @@
 font-family: KaushanScript-Regular;
 src:url(../font/KaushanScript-Regular.otf);
 }
+a {
+text-decoration: none;
+color:black;
+}
 #scena{
 display:none;
 #background-image: url('../image/tlo_nie/scena.png') ;
