--- a/Aplikacja/style/main_rejestracja.css
+++ b/Aplikacja/style/main_rejestracja.css
@@ -202,6 +202,7 @@ border-radius:20px;
 margin-top:5px;
 margin-left:8px;
 margin-right:5px;
+overflow-y:auto;
 }
 p{
 font-family:KaushanScript-Regular;
@@ -211,8 +212,8 @@ margin-top:5px;
 padding:0;
 }
 input[type=radio] {
-	width:2em;
-    height: 2em;
+	width:1.5em;
+    height: 1.5em;
 }
 #wybor_konta{
 float:left;
@@ -221,3 +222,28 @@ padding:0;
 width:25%;
 padding-left:8%;
 }
+#pole{
+margin-left:10px;
+font-size:1em;
+margin-bottom:10px;
+}
+#pole:focus{
+outline: 3px solid red;
+}
+#div_poje_wpisu{
+padding:0;
+margin:0;
+margin-left:1%;
+margin-right:1%;
+margin-bottom:10px;;
+}
+.btn {
+    background: #fbb200; 
+    color:#000;
+    width:10%;
+	margin-left:45%;
+    height:40px;
+    line-height:40px;
+    text-align:center;
+    font-weight:700;
+)
