--- a/Aplikacja/style/main_rejestracja.css
+++ b/Aplikacja/style/main_rejestracja.css
@@ -197,12 +197,12 @@ position:relative;
 font-family:KaushanScript-Regular;
 background: rgba(247, 125, 9, 0.85);
 border:2px solid red;
-height:86%;
+height:84%;
 border-radius:20px;
 margin-top:5px;
 margin-left:8px;
 margin-right:5px;
-overflow-y:auto;
+padding-bottom:2%;
 }
 p{
 font-family:KaushanScript-Regular;
@@ -225,6 +225,7 @@ padding-left:8%;
 #pole{
 margin-left:10px;
 font-size:1em;
+padding:0;
 margin-bottom:10px;
 }
 #pole:focus{
@@ -241,9 +242,57 @@ margin-bottom:10px;;
     background: #fbb200; 
     color:#000;
     width:10%;
+	position:relative;
 	margin-left:45%;
     height:40px;
     line-height:40px;
     text-align:center;
     font-weight:700;
-)
+	display:block;
+	float:none;
+	margin-top:40px;
+}
+#checkbox_set{
+position:relative;
+float:left;
+font-size:0.8em;
+margin-left:10px;
+width:18%;
+}
+#regulamin{
+position:relative;
+border:4px solid red;
+width:80%;
+height:50%;
+margin-left:9%;
+margin-top:3%;
+float:left;
+padding:2%;
+background-color:white;
+font-size:2em;
+font-family: Arial, Helvetica, sans-serif;
+overflow-y:auto;
+}
+#checkbox_regulamin{
+float:left;
+margin-left:4%;
+margin-top:2%;
+}
+#submit_button{
+float:left;
+padding:0;
+width:100%;
+}
+#formularz_wnetrze{
+position:relative;
+width:98%;
+margin-left:1%;
+height:98%;
+margin-top:1%;
+overflow-y:auto;
+}
+#akceptuj{
+float:left;
+width:100%;
+
+}
