--- a/Aplikacja/style/user.css
+++ b/Aplikacja/style/user.css
@@ -14,6 +14,17 @@ margin-top:5px;
 margin-left:8px;
 margin-right:5px;
 }
+#tlo_user_po_zalogowaniu{
+position:relative;
+font-family:KaushanScript-Regular;
+background: rgba(247, 125, 9, 0.85);
+border:2px solid red;
+height:98%;
+border-radius:20px;
+margin-top:5px;
+margin-left:8px;
+margin-right:5px;
+}
 #nazwa_sekcji_user{
 background-image: url('../image/inne/nazwa_sekcji_user.png') ;
 background-size:100% 100%;
@@ -48,4 +59,25 @@ cursor: pointer;
 #forget:hover{
 cursor: pointer;
 color:red;
+}
+#powitanie{
+height:10%;
+width:100%;
+font-size:2em;
+padding:0;
+padding-top:3%;
+}
+#info_user{
+padding:0;
+margin:0;
+margin-left:2%;
+margin-top:2%;
+margin-right:2%;
+font-size:1.2em;
+}
+#wyloguj{
+position:relative;
+height:10%;
+margin-top:10%;
+width:100%;
 }
